force-app/main/default/objects/GMOPaymentBean__c/GMOPaymentBean__c.object-meta.xml
<CustomObject>
    <label>GMOPaymentBean</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>GMOPaymentBean Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>