force-app/main/default/objects/GMOPaymentBean__c/fields/access_url__c.field-meta.xml
<CustomField>
    <fullName>access_url__c</fullName>
    <label>access_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>