force-app/main/default/objects/GMOPaymentBean__c/fields/add_info1__c.field-meta.xml
<CustomField>
    <fullName>add_info1__c</fullName>
    <label>add_info1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>