force-app/main/default/objects/GMOPaymentBean__c/fields/card_holder_name__c.field-meta.xml
<CustomField>
    <fullName>card_holder_name__c</fullName>
    <label>card_holder_name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>