force-app/main/default/objects/GMOPaymentBean__c/fields/card_number__c.field-meta.xml
<CustomField>
    <fullName>card_number__c</fullName>
    <label>card_number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>