force-app/main/default/objects/GMOPaymentBean__c/fields/character_code__c.field-meta.xml
<CustomField>
    <fullName>character_code__c</fullName>
    <label>character_code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>