force-app/main/default/objects/GMOPaymentBean__c/fields/contract_code__c.field-meta.xml
<CustomField>
    <fullName>contract_code__c</fullName>
    <label>contract_code</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>