force-app/main/default/objects/GMOPaymentBean__c/fields/currency_id__c.field-meta.xml
<CustomField>
    <fullName>currency_id__c</fullName>
    <label>currency_id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>