force-app/main/default/objects/GMOPaymentBean__c/fields/err_code__c.field-meta.xml
<CustomField>
    <fullName>err_code__c</fullName>
    <label>err_code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>