force-app/main/default/objects/GMOPaymentBean__c/fields/err_detail__c.field-meta.xml
<CustomField>
    <fullName>err_detail__c</fullName>
    <label>err_detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>