force-app/main/default/objects/GMOPaymentBean__c/fields/expire_month__c.field-meta.xml
<CustomField>
    <fullName>expire_month__c</fullName>
    <label>expire_month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>