force-app/main/default/objects/GMOPaymentBean__c/fields/expire_year__c.field-meta.xml
<CustomField>
    <fullName>expire_year__c</fullName>
    <label>expire_year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>