force-app/main/default/objects/GMOPaymentBean__c/fields/ip_address__c.field-meta.xml
<CustomField>
    <fullName>ip_address__c</fullName>
    <label>ip_address</label>
    <length>32</length>
    <type>Text</type>
</CustomField>