force-app/main/default/objects/GMOPaymentBean__c/fields/item_code__c.field-meta.xml
<CustomField>
    <fullName>item_code__c</fullName>
    <label>item_code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>