force-app/main/default/objects/GMOPaymentBean__c/fields/item_name__c.field-meta.xml
<CustomField>
    <fullName>item_name__c</fullName>
    <label>item_name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>