force-app/main/default/objects/GMOPaymentBean__c/fields/item_price__c.field-meta.xml
<CustomField>
    <fullName>item_price__c</fullName>
    <label>item_price</label>
    <length>16</length>
    <type>Text</type>
</CustomField>