force-app/main/default/objects/GMOPaymentBean__c/fields/lang_id__c.field-meta.xml
<CustomField>
    <fullName>lang_id__c</fullName>
    <label>lang_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>