force-app/main/default/objects/GMOPaymentBean__c/fields/mission_code__c.field-meta.xml
<CustomField>
    <fullName>mission_code__c</fullName>
    <label>mission_code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>