force-app/main/default/objects/GMOPaymentBean__c/fields/mode__c.field-meta.xml
<CustomField>
    <fullName>mode__c</fullName>
    <label>mode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>