force-app/main/default/objects/GMOPaymentBean__c/fields/order_number__c.field-meta.xml
<CustomField>
    <fullName>order_number__c</fullName>
    <label>order_number</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>