force-app/main/default/objects/GMOPaymentBean__c/fields/pan_bank__c.field-meta.xml
<CustomField>
    <fullName>pan_bank__c</fullName>
    <label>pan_bank</label>
    <length>32</length>
    <type>Text</type>
</CustomField>