force-app/main/default/objects/GMOPaymentBean__c/fields/pan_country__c.field-meta.xml
<CustomField>
    <fullName>pan_country__c</fullName>
    <label>pan_country</label>
    <length>32</length>
    <type>Text</type>
</CustomField>