force-app/main/default/objects/GMOPaymentBean__c/fields/payment_code__c.field-meta.xml
<CustomField>
    <fullName>payment_code__c</fullName>
    <label>payment_code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>