force-app/main/default/objects/GMOPaymentBean__c/fields/process_code__c.field-meta.xml
<CustomField>
    <fullName>process_code__c</fullName>
    <label>process_code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>