force-app/main/default/objects/GMOPaymentBean__c/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <label>result</label>
    <length>16</length>
    <type>Text</type>
</CustomField>