force-app/main/default/objects/GMOPaymentBean__c/fields/security_code__c.field-meta.xml
<CustomField>
    <fullName>security_code__c</fullName>
    <label>security_code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>