force-app/main/default/objects/GMOPaymentBean__c/fields/st_code__c.field-meta.xml
<CustomField>
    <fullName>st_code__c</fullName>
    <label>st_code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>