force-app/main/default/objects/GMOPaymentBean__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <length>32</length>
    <type>Text</type>
</CustomField>