force-app/main/default/objects/GMOPaymentBean__c/fields/trans_code__c.field-meta.xml
<CustomField>
    <fullName>trans_code__c</fullName>
    <label>trans_code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>