force-app/main/default/objects/GMOPaymentBean__c/fields/trans_code_hash__c.field-meta.xml
<CustomField>
    <fullName>trans_code_hash__c</fullName>
    <label>trans_code_hash</label>
    <length>32</length>
    <type>Text</type>
</CustomField>