force-app/main/default/objects/GMOPaymentBean__c/fields/user_agent__c.field-meta.xml
<CustomField>
    <fullName>user_agent__c</fullName>
    <label>user_agent</label>
    <length>128</length>
    <type>Text</type>
</CustomField>