force-app/main/default/objects/GMOPaymentBean__c/fields/user_mail_add__c.field-meta.xml
<CustomField>
    <fullName>user_mail_add__c</fullName>
    <label>user_mail_add</label>
    <length>32</length>
    <type>Text</type>
</CustomField>