force-app/main/default/objects/GMOPaymentBean__c/fields/user_name__c.field-meta.xml
<CustomField>
    <fullName>user_name__c</fullName>
    <label>user_name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>